<resources>
    <string name="app_name">NAPA BILLING</string>
    <string name="login_text">North American Partners in Anesthesia</string>
    <string name="aris_coding_system">Aris Coding System</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_your_location">Add Your Location</string>
    <string name="add">Add</string>
    <string name="cancel_case">Cancel Case </string>
    <string name="select_only_one"> (Select only one)</string>
    <string name="reason_select_all_that_apply">(Select all that apply)</string>
    <string name="before_induction">Before Induction</string>
    <string name="after_induction">After Induction</string>
    <string name="reason">Reason</string>
    <string name="system">System</string>
    <string name="medical">Medical</string>
    <string name="patient">Patient</string>
    <string name="submit">Submit</string>
    <string name="asa_physical_status">ASA Physical Status</string>
    <string name="one">1</string>
    <string name="n_a">N/A</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="e">E</string>
    <string name="anesthesia_time">Anesthesia Time</string>
    <string name="pre_op_time">Pre-op Time</string>
    <string name="start">Start</string>
    <string name="start_date">Start Date</string>
    <string name="end">End</string>
    <string name="end_date">End Date</string>
    <string name="reason_pre_op">Reason for pre-op-Time</string>
    <string name="in_or_time">In OR Time</string>
    <string name="pacu_transfer_of_care_time">PACU Transfer of care time</string>
    <string name="lines_block_others">Lines/Blocks/Other</string>
    <string name="writesomthing">Write a note</string>
    <string name="charge_information">Charge Information</string>
    <string name="qty_information">Quality Information</string>
    <string name="invasive_lines">Invasive Lines</string>
    <string name="advanced_qi">Advanced QI 1/2</string>
    <string name="post_op_pain">Post-op Pain Blocks</string>
    <string name="cardiac_and_tee">Cardiac and TEE</string>
    <string name="other">Other</string>
    <string name="one_lung_ventillation">One lung ventilation</string>
    <string name="controlled_hypotension">Controlled hypotension</string>
    <string name="special_catheter">Special catheter for CSF drainage</string>
    <string name="invasivelineandspecialservice"><![CDATA[Invasive Lines & Special Services]]></string>
    <string name="cardiac_tee">Cardiac and TEE</string>
    <string name="insertation">Insertion</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="prep_area">Prep area</string>
    <string name="in_or_prior_to_induction">In OR prior to induction</string>
    <string name="in_or_after_to_induction">In OR after to induction</string>
    <string name="arterial_line">Arterial Line</string>
    <string name="cvp_line_more_5">CVP Line (> 5 years of age)</string>
    <string name="cvp_line_less_5">CVP Line (&lt; 5 years of age)</string>
    <string name="ultrasound_guided">Ultrasound guided</string>
    <string name="double_stick">Double stick (select one)</string>
    <string name="two_separate_cvp_stick">2 separate CVP stick</string>
    <string name="one_cvp_1_separate">1 CVP and 1 separate Swan</string>
    <string name="qtyinformationdetails">Attestation of Current medications documented in the medical record (Based on resources available)</string>
    <string name="no_listed_event">No Listed Events Intra-op</string>
    <string name="addmission_temperature">Admission Temperature 98.5</string>
    <string name="above_equal">Above/Equal</string>
    <string name="below">Below</string>
    <string name="pacu_direct_handoff">PACU Direct Handoff</string>
    <string name="per_handoff">Per Handoff Protocols</string>
    <string name="not_per_handoff">Not Per Handoff Protocols</string>
    <string name="admission_pain_store">Admission Pain Score</string>
    <string name="osa_score">OSA Score</string>
    <string name="known_osa">Known OSA, Previously Diagnosed</string>
    <string name="advanced_option">Advanced Options</string>
    <string name="airway_respiratory">Airway/Respiratory</string>
    <string name="cardiovascular">Cardiovascular</string>
    <string name="neurologic">Neurologic</string>
    <string name="regional">Regional</string>
    <string name="procedural">Procedural</string>
    <string name="pharmacy_bloodbank">Pharmacy/Blood Bank</string>
    <string name="morbidity_mortality">Morbidity/Mortality</string>
    <string name="compliance">Compliance</string>
    <string name="retake">Retake</string>
    <string name="images">Images</string>
    <string name="add_additional_image">Add additional image</string>
    <string name="surgon">Surgeon</string>
    <string name="anesthesiologist">Anesthesiologist</string>
    <string name="crna">CRNA</string>
    <string name="resident">Resident</string>
    <string name="srna">SRNA</string>
    <string name="procedure">Procedure</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="position">Position</string>
    <string name="mode_of_anesthesia">Mode of Anesthesia</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="negative_pressure_pulmonary_edema">Negative pressure pulmonary edema</string>
    <string name="pulmonary_embolus">Pulmonary embolus</string>
    <string name="place_picker_key">AIzaSyDMOmKgaO4PGfpZ3lcKpwXOrwjSW-KxRzM</string>
    <string name="charge">Charge</string>
    <string name="qi">QI</string>
    <string name="cancel">Cancel</string>
    <string name="reopen">Reopen</string>
    <string name="reopen_confirm_message">Are you sure you want to reopen?</string>
    <string name="delete_confirm_msg">Are you sure want to delete?</string>
    <string name="are_you_sure_want_to_logout">Are you sure  want to logout?</string>
    <string name="version">Version</string>
    <string name="cancelled">Cancelled</string>
    <string name="provider">Provider</string>
    <string name="bilateral">Bilateral</string>
    <string name="unilateral">Unilateral</string>
    <string name="continuous_catheter">Continuous catheter</string>
    <string name="single_shot">Single shot</string>
    <string name="image_saved">Image saved</string>
    <string name="lower_extremity">Lower Extremity</string>
    <string name="upper_extremity">Upper Extremity</string>
    <string name="neuraxial">Neuraxial</string>
    <string name="chest_and_abdomen">Chest and Abdomen</string>
    <string name="off_pump">Off pump</string>
    <string name="hypothermic_circulatory">Hypothermic circulatory arrest</string>
    <string name="re_do_cabg">Re-do CABG (> 1month)</string>
    <string name="swan_ganz_catheter">Swan-Ganz Catheter</string>
    <string name="pump_procedure">Pump procedure (&lt;1 year of age)</string>
    <string name="tee_probe_insertion">TEE probe insertion only</string>
    <string name="tee_interpretation">TEE w/interpretation and report</string>
    <string name="tee_congenital">TEE for congenital anomalies</string>
    <string name="dopper_echo_pulse_wave">Doppler echo pulse wave</string>
    <string name="dopper_echo_color_flow">Doppler echo color flow</string>
    <string name="intra_op">Intra Op</string>
    <string name="post_op">Post Op</string>
    <string name="difficult_airway">Difficult Airway</string>
    <string name="planned_use_of_difficult">Planned use of difficult airway equipment"</string>
    <string name="unplanned_use_of_difficult">Unplanned use of difficult airway equipment"</string>
    <string name="unable_to_intubate">Unable to intubate</string>
    <string name="surgical_airway_required">Surgical airway required</string>
    <string name="respiratory">Respiratory</string>
    <string name="aspiration">Aspiration</string>
    <string name="laryngospasm_with_intervention">Laryngospasm with intervention</string>
    <string name="bronchospasm_with_intervention">Bronchospasm with intervention</string>
    <string name="non_dental_upper_airway_trauma">Non-dental upper airway trauma</string>
    <string name="pulmonary_edema">Pulmonary edema</string>
    <string name="air_embolus">Air Embolus</string>
    <string name="unplanned_intubation">Unplanned (re)intubation</string>
    <string name="post_op_mechanical_ventilation">Post-Op mechanical ventilation</string>
    <string name="narcan_given">Narcan given</string>
    <string name="myocardial_ischemia">Myocardial ischemia requiring intervention</string>
    <string name="myocardial_infarction">Myocardial infarction</string>
    <string name="dysrhythmia_requiring_treament">Dysrhythmia requiring treatment</string>
    <string name="cardiac_arrest">Cardiac arrest (with CPR)</string>
    <string name="cva">CVA</string>
    <string name="hypoxemic_brain_injury">Hypoxemic brain injury/coma</string>
    <string name="other_brain_injury">Other brain injury</string>
    <string name="peripheral_nerve_injury">Peripheral nerve injury: NOT relating to distribution of regional anesthesia</string>
    <string name="visual_loss">Visual Loss</string>
    <string name="seizure">Seizure</string>
    <string name="other_spinal_cord_injury">Other spinal cord injury</string>
    <string name="post_op_delirium">Post-op delirium</string>
    <string name="wet_tap">Wet tap</string>
    <string name="post_dural_puncture">Post-dural puncture H/A</string>
    <string name="failed_regional_block">Failed regional block as primary anesthetic</string>
    <string name="local_anesthetic_toxicity">Local anesthetic toxicity</string>
    <string name="excessive_block_requiring_airway_support">Excessive block requiring airway support</string>
    <string name="epidural_hematoma_following_regional">Epidural hematoma following regional</string>
    <string name="epidural_abscess_following_regional">Epidural abscess following regional</string>
    <string name="peripheral_nerve_injury_in_distribution_of_regional_anesthesia">Peripheral nerve injury: in distribution of regional anesthesia</string>
    <string name="infection_after_a_peripheral_nerve_block">Infection after a peripheral nerve block</string>
    <string name="vascular_access_complication">Vascular access complication</string>
    <string name="pneumothorax">Pneumothorax</string>
    <string name="mailgnant_hyperthermia">Mailgnant hyperthermia</string>
    <string name="anaphylaxis">Anaphylaxis</string>
    <string name="medication_error">Medication Error</string>
    <string name="patient_safety">Patient Safety</string>
    <string name="other_injury">Other Injury</string>
    <string name="dental_injury"><i>Dental injury</i></string>
    <string name="corneal_abrasion"><i>Corneal abrasion</i></string>
    <string name="new_pressure_sore_or_breakdown">New pressure sore or breakdown</string>
    <string name="eyelid_injury">Eyelid injury</string>
    <string name="laceration_skin_tear">Laceration/skin tear</string>
    <string name="agitation_reqiring_restrainsts">Agitation requiring restraints</string>
    <string name="patient_fail">Patient fail</string>
    <string name="incorrect_surgical_site">Incorrect surgical site, side, patient, procedure, or implant</string>
    <string name="dob_without_colon">DOB</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_patient">Add Patient</string>
    <string name="icd1">ICD 1</string>
    <string name="icd2">ICD 2</string>
    <string name="icd3">ICD 3</string>
    <string name="icd4">ICD 4</string>
</resources>