<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        layout="@layout/customtoolbar"
        android:id="@+id/main_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <EditText
        android:id="@+id/edt_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/textviewsquire"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="code"
        android:paddingLeft="@dimen/_5sdp"/>


    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spi_mode1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spi_mode2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spi_mode3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"/>


    <AutoCompleteTextView
        android:id="@+id/edt_icd1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/textviewsquire"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/icd1"
        android:paddingLeft="@dimen/_5sdp"/>

    <AutoCompleteTextView
        android:id="@+id/edt_icd2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/textviewsquire"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/icd2"
        android:paddingLeft="@dimen/_5sdp"/>

    <AutoCompleteTextView
        android:id="@+id/edt_icd3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/textviewsquire"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/icd3"
        android:paddingLeft="@dimen/_5sdp"/>

    <AutoCompleteTextView
        android:id="@+id/edt_icd4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/textviewsquire"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/icd4"
        android:paddingLeft="@dimen/_5sdp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

</layout>