<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whitecolor"
        android:orientation="vertical">

        <include
            android:id="@+id/main_toolbar"
            layout="@layout/customtoolbar" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/recentaglarcornortime"
                    android:cursorVisible="true"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColor="@color/blackcolor"
                    android:textCursorDrawable="@null" />


                <EditText
                    android:id="@+id/edt_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/recentaglarcornortime"
                    android:cursorVisible="true"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="@string/last_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:singleLine="true"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/blackcolor"
                    android:textCursorDrawable="@null" />

                <EditText
                    android:id="@+id/edt_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/recentaglarcornortime"
                    android:focusable="false"
                    android:hint="@string/dob_without_colon"
                    android:inputType="date"
                    android:padding="@dimen/_8sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_start_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/recentaglarcornortime"
                        android:focusable="false"
                        android:hint="@string/start_date"
                        android:inputType="date"
                        android:padding="@dimen/_8sdp" />

                    <EditText
                        android:id="@+id/edt_start_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/recentaglarcornortime"
                        android:focusable="false"
                        android:hint="@string/start_time"
                        android:inputType="date"
                        android:padding="@dimen/_8sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_end_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/recentaglarcornortime"
                        android:focusable="false"
                        android:hint="@string/end_date"
                        android:inputType="date"
                        android:padding="@dimen/_8sdp" />

                    <EditText
                        android:id="@+id/edt_end_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/recentaglarcornortime"
                        android:focusable="false"
                        android:hint="@string/end_time"
                        android:inputType="date"
                        android:padding="@dimen/_8sdp" />

                </LinearLayout>


                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/spinner_bg"
                    android:paddingBottom="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp" />

                <Spinner
                    android:id="@+id/spinner_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/spinner_bg"
                    android:paddingBottom="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple"
                    android:layout_width="@dimen/_190sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:mrl_rippleAlpha="0.1"
                    app:mrl_rippleBackground="#FFFFFF"
                    app:mrl_rippleColor="@color/whitecolor"
                    app:mrl_rippleDelayClick="true"
                    app:mrl_rippleDimension="10dp"
                    app:mrl_rippleDuration="350"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true"
                    app:mrl_ripplePersistent="false">


                    <Button
                        android:id="@+id/btn_search"
                        android:layout_width="@dimen/_190sdp"
                        android:layout_height="wrap_content"
                        android:background="@color/bluecolor"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/add_patient"
                        android:textAllCaps="false"
                        android:textColor="@color/whitecolor"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</layout>